@@ -53,6 +53,9 @@ returnMenu "Menu"
 returnHome "Return to Your House"
 
 
+shutdownPendingWarning "The server is waiting for you so that it can shut down.##Please finish up what you are doing.######Press SPACE to return to the game."
+
+
 
 
 okay "Okay"
